[fix] Prevent horizontal scrolling on pages; fixes #715
Former-commit-id: 4904421688e2081ea9e868cd57c32ccceb93a7d3

--- a/opsiweb/uib-components/static/themes/opsi.css
+++ b/opsiweb/uib-components/static/themes/opsi.css
@@ -18,7 +18,8 @@ body{
   line-height:1.5;
   color:var(--fg-basic);
   text-align:left;
-  background-color:var(--bg-basic)
+  background-color:var(--bg-basic);
+  overflow-x: hidden;
 }
 [tabindex="-1"]:focus:not(:focus-visible){
   outline:0 !important
